--- a/_damaboba/dbitem1000170103.md
+++ b/_damaboba/dbitem1000170103.md
@@ -16,7 +16,10 @@ language: Español
 relation:
 rights: http://creativecommons.org/licenses/by-nc-sa/4.0/
 dc: "/dc_records/dbitem1000170103"
-order: '06'
+order: '25'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000170103_00/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000170103/manifest.json"
+full: "/img/derivatives/iiif/images/dbitem1000170103_00/full/1140,/0/default.jpg"
 ---
