--- a/_damaboba/dbitem1000170106.md
+++ b/_damaboba/dbitem1000170106.md
@@ -13,7 +13,10 @@ language: Español
 relation: Es parte de dbitem1000170105 ; es versión de dbitem1000170104
 rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000170106"
-order: '09'
+order: '28'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000170106_00/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000170106/manifest.json"
+full: "/img/derivatives/iiif/images/dbitem1000170106_00/full/1140,/0/default.jpg"
 ---
