--- a/_damaboba/dbitem1000190109.md
+++ b/_damaboba/dbitem1000190109.md
@@ -15,7 +15,10 @@ language: Español
 relation: Se basa en dbitem1000190102 ; es parte de dbitemdbitem1000190108
 rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000190109"
-order: '14'
+order: '19'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000190109_00/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000190109/manifest.json"
+full: "/img/derivatives/iiif/images/dbitem1000190109_00/full/1140,/0/default.jpg"
 ---
