--- a/_damaboba/dbitem2000170301.md
+++ b/_damaboba/dbitem2000170301.md
@@ -17,7 +17,10 @@ language:
 relation:
 rights: Copyright Museo del Prado,  todos los derechos reservados.
 dc: "/dc_records/dbitem2000170301"
-order: '32'
+order: '08'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem2000170301/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem2000170301/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem2000170301/manifest.json"
 ---
