--- a/_damaboba/dbitem6000190106.md
+++ b/_damaboba/dbitem6000190106.md
@@ -16,7 +16,10 @@ language: Español
 relation: Se basa en dbitem0000190103
 rights: Copyright BMP, todos los derechos reservados
 dc: "/dc_records/dbitem6000190106"
-order: '26'
+order: '04'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem6000190106_000/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem6000190106_000/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem6000190106/manifest.json"
 ---
