--- a/_damaboba/dbitem0100200301.md
+++ b/_damaboba/dbitem0100200301.md
@@ -17,4 +17,7 @@ dc: "/dc_records/dbitem0000190301"
 order: '01'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem0100200301_01Small/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem0100200301_01Small/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem0100200301/manifest.json"
 ---
