--- a/_damaboba/dbitem1000170101.md
+++ b/_damaboba/dbitem1000170101.md
@@ -15,7 +15,10 @@ language: Español
 relation:
 rights: http://creativecommons.org/licenses/by-nc-sa/4.0/
 dc: "/dc_records/dbitem1000170101"
-order: '04'
+order: '29'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000170101_000/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000170101/manifest.json"
+full: ''
 ---
