--- a/_damaboba/dbitem1000170102.md
+++ b/_damaboba/dbitem1000170102.md
@@ -15,7 +15,10 @@ language: Español
 relation: Se basa en /img/dbitem0000170201
 rights: http://creativecommons.org/licenses/by-nc-sa/4.0/
 dc: "/dc_records/dbitem1000170102"
-order: '05'
+order: '30'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000170102_000/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000170102/manifest.json"
+full: "/img/derivatives/iiif/images/dbitem1000170102_000/full/1140,/0/default.jpg"
 ---
