--- a/_damaboba/dbitem1000170104.md
+++ b/_damaboba/dbitem1000170104.md
@@ -14,7 +14,10 @@ language: Español
 relation: Se aproxima a dbitem1000170102 ; es parte de dbitem1000170103
 rights: http://creativecommons.org/licenses/by-nc-sa/4.0/
 dc: "/dc_records/dbitem1000170104"
-order: '07'
+order: '26'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000170104_00/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000170104/manifest.json"
+full: "/img/derivatives/iiif/images/dbitem1000170104_00/full/1140,/0/default.jpg"
 ---
