--- a/_damaboba/dbitem1000170105.md
+++ b/_damaboba/dbitem1000170105.md
@@ -16,7 +16,10 @@ language: Español
 relation: 'Es versión de dbitem1000170103 '
 rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000170105"
-order: '08'
+order: '27'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000170105_0/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000170105/manifest.json"
+full: "/img/derivatives/iiif/images/dbitem1000170105_0/full/1140,/0/default.jpg"
 ---
