--- a/_damaboba/dbitem1000180101.md
+++ b/_damaboba/dbitem1000180101.md
@@ -16,7 +16,10 @@ language: Español
 relation: Se basa en dbitem1000170104
 rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000180101"
-order: '10'
+order: '20'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000180101_00/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000180101/manifest.json"
+full: "/img/derivatives/iiif/images/dbitem1000180101_00/full/1140,/0/default.jpg"
 ---
