--- a/_damaboba/dbitem1000190101.md
+++ b/_damaboba/dbitem1000190101.md
@@ -18,7 +18,10 @@ language: Español
 relation:
 rights: Copyright BNE, todos los derechos reservados
 dc: "/dc_records/dbitem1000190101"
-order: '12'
+order: '17'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000190101_00/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000190101/manifest.json"
+full: "/img/derivatives/iiif/images/dbitem1000190101_00/full/1140,/0/default.jpg"
 ---
