--- a/_damaboba/dbitem1000190112.md
+++ b/_damaboba/dbitem1000190112.md
@@ -14,7 +14,10 @@ language: Español
 relation: Se basa en dbitem1000190102 ; es parte de dbitem8000190502
 rights: Copyright BNE, todos los derechos reservados
 dc: "/dc_records/dbitem1000190112"
-order: '15'
+order: '16'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000190112_00/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem1000190112_00/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000190112/manifest.json"
 ---
