--- a/_damaboba/dbitem1500200124.md
+++ b/_damaboba/dbitem1500200124.md
@@ -19,7 +19,10 @@ language: Español
 relation: Se basa en dbitem1000190102
 rights: Copyright AGA, todos los derechos reservados
 dc: "/dc_records/dbitem1500200124"
-order: '20'
+order: '11'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1500200124_21-05780-00006-001/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem1500200124_21-05780-00006-001/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1500200124/manifest.json"
 ---
