--- a/_damaboba/dbitem2000200306.md
+++ b/_damaboba/dbitem2000200306.md
@@ -15,7 +15,10 @@ language:
 relation: Se aproxima a dbitem0000190501
 rights: Copyright Museo del Prado,  todos los derechos reservados.
 dc: "/dc_records/dbitem2000200306"
-order: '34'
+order: '10'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem2000200306/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem2000200306/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem2000200306/manifest.json"
 ---
