--- a/_damaboba/dbitem3000190104.md
+++ b/_damaboba/dbitem3000190104.md
@@ -17,7 +17,10 @@ language: Español
 relation: Se basa en dbitem0000190103
 rights: http://creativecommons.org/licenses/by-nc/2.5/
 dc: "/dc_records/dbitem3000190104"
-order: '22'
+order: '23'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem3000190104_000/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem3000190104/manifest.json"
+full: "/img/derivatives/iiif/images/dbitem3000190104_000/full/1140,/0/default.jpg"
 ---
