--- a/_damaboba/dbitem3000200304.md
+++ b/_damaboba/dbitem3000200304.md
@@ -14,7 +14,10 @@ language:
 relation: Se aproxima a dbitem000190301 ; es parte de dbitem0100200302
 rights: http://creativecommons.org/licenses/by-nc/2.5/
 dc: "/dc_records/dbitem3000200304"
-order: '24'
+order: '12'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem3000200304_0/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem3000200304_0/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem3000200304/manifest.json"
 ---
