--- a/_damaboba/dbitem5000190107.md
+++ b/_damaboba/dbitem5000190107.md
@@ -14,7 +14,10 @@ language: Español
 relation: Se basa en dbitem0000190103
 rights: http://creativecommons.org/licenses/by-nc/2.5/
 dc: "/dc_records/dbitem5000190107"
-order: '25'
+order: '13'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem5000190107_00/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem5000190107_00/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem5000190107/manifest.json"
 ---
