--- a/_damaboba/dbitem7000190110.md
+++ b/_damaboba/dbitem7000190110.md
@@ -14,7 +14,10 @@ language: Español
 relation: Es versión de dbitem1000190109
 rights: Copyright BC, todos los derechos reservados
 dc: "/dc_records/dbitem7000190110"
-order: '27'
+order: '14'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem7000190110_00/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem7000190110_00/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem7000190110/manifest.json"
 ---
