--- a/_damaboba/dbitem0000190301.md
+++ b/_damaboba/dbitem0000190301.md
@@ -2,7 +2,7 @@
 pid: dbitem0000190301
 label: María Guerrero como Clara en <i>La niña boba</i>
 creator: García Peris, Antonio
-description: Serie de fotografías de la actriz María Guerrero. Entre ellas aparece
+description: Serie de fotografías de la actriz María Guerrero. Entre ellas aparece retratada
   como Clara, el personaje protagonista de la refundición titulada como <i>La niña
   boba</i>. Antonio García Peris era suegro del pintor valenciano Joaquín Sorolla.
 publisher:
@@ -13,8 +13,8 @@ repository: 'Biblioteca Virtual de Prensa Histórica: <i>La Revista moderna</i> 
   8)'
 source: https://prensahistorica.mcu.es/es/catalogo_imagenes/grupo.do?path=7151469&posicion=8&presentacion=pagina
 language:
-relation: Se aproxima a /img/dbitem0000190501
-rights: http://creativecommons.org/licenses/by-nc-sa/4.0/
+relation: Se aproxima a "/img/dbitem0000190501"
+rights: "http://creativecommons.org/licenses/by-nc-sa/4.0/"
 dc: "/dc_records/dbitem0100200302"
 order: '00'
 layout: damaboba_item
