--- a/_damaboba/dbitem0000190301.md
+++ b/_damaboba/dbitem0000190301.md
@@ -13,7 +13,7 @@ repository: 'Biblioteca Virtual de Prensa Histórica: <i>La Revista moderna</i> 
   8)'
 source: https://prensahistorica.mcu.es/es/catalogo_imagenes/grupo.do?path=7151469&posicion=8&presentacion=pagina
 language:
-relation: Se aproxima a "/img/dbitem0000190501"
+relation: Se aproxima a "/damaboba/dbitem0000190501"
 rights: "http://creativecommons.org/licenses/by-nc-sa/4.0/"
 dc: "/dc_records/dbitem0100200302"
 order: '00'
