--- a/_damaboba/dbitem0100200301.md
+++ b/_damaboba/dbitem0100200301.md
@@ -11,7 +11,7 @@ object_type: Tarjeta Postal
 repository: Colección Privada
 source:
 language:
-relation: Se aproxima a "/_damaboba/dbitem0000190301/"
+relation: Se aproxima a [dbitem0000190301]("/_damaboba/dbitem0000190301/)
 rights: http://creativecommons.org/licenses/by-nc-sa/4.0/
 dc: "/dc_records/dbitem0100200301"
 order: '01'
