--- a/_damaboba/dbitem0100200301.md
+++ b/_damaboba/dbitem0100200301.md
@@ -12,7 +12,7 @@ repository: Colección Privada
 source:
 language:
 relation: Se aproxima a <a href="/damaboba/damaboba/dbitem0000190301/">dbitem0000190301</a>
-rights: http://creativecommons.org/licenses/by-nc-sa/4.0/
+rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem0100200301"
 order: '01'
 layout: damaboba_item
