--- a/_damaboba/dbitem0100200303.md
+++ b/_damaboba/dbitem0100200303.md
@@ -13,7 +13,7 @@ repository: Colección Privada
 source:
 language:
 relation: Se aproxima a /img/dbitem0100200301
-rights: http://creativecommons.org/licenses/by-nc-sa/4.0/
+rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem0000190303"
 order: '03'
 layout: damaboba_item
