--- a/_damaboba/dbitem1000170104.md
+++ b/_damaboba/dbitem1000170104.md
@@ -12,7 +12,7 @@ repository: Biblioteca Digital Hispánica
 source: http://bdh.bne.es/bnesearch/detalle/bdh0000014188
 language: Español
 relation: Se aproxima a dbitem1000170102 ; es parte de dbitem1000170103
-rights: http://creativecommons.org/licenses/by-nc-sa/4.0/
+rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000170104"
 order: '26'
 layout: damaboba_item
