--- a/_damaboba/dbitem1000200307.md
+++ b/_damaboba/dbitem1000200307.md
@@ -13,7 +13,7 @@ repository: Hemeroteca Digital Hispánica
 source: http://hemerotecadigital.bne.es/issue.vm?id=0003470710&page=3
 language:
 relation: Se aproxima a dbitem0000190501
-rights: http://creativecommons.org/licenses/by-nc-sa/4.0/
+rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000200307"
 order: '06'
 layout: damaboba_item
