--- a/_damaboba/dbitem1100200101.md
+++ b/_damaboba/dbitem1100200101.md
@@ -13,7 +13,7 @@ repository: University of North Carolina at Chapel Hill ; Internet Archives
 source: https://archive.org/details/laninabobaobuenm557vega/mode/2up
 language: Español
 relation: Se aproxima a dbitem0000190103 ; se aproxima a dbitem1000170104
-rights: https://creativecommons.org/publicdomain/zero/1.0/
+rights: <a href="https://creativecommons.org/publicdomain/zero/1.0/">https://creativecommons.org/publicdomain/zero/1.0/</a>
 dc: "/dc_records/dbitem1100200101"
 order: '17'
 layout: damaboba_item
