--- a/_damaboba/dbitem1200200106.md
+++ b/_damaboba/dbitem1200200106.md
@@ -12,7 +12,7 @@ repository: Hathi Trust Digital Library
 source: https://catalog.hathitrust.org/Record/100760255
 language: Español
 relation: Se basa en dbitem1000170101
-rights: https://www.hathitrust.org/access_use#pd
+rights: <a href="https://www.hathitrust.org/access_use#pd">https://www.hathitrust.org/access_use#pd</a>
 dc: "/dc_records/dbitem1200200106"
 order: '19'
 layout: damaboba_item
