--- a/_damaboba/dbitem3000180102.md
+++ b/_damaboba/dbitem3000180102.md
@@ -14,7 +14,7 @@ repository: Biblioteca Histórica de Madrid
 source: http://catalogos.munimadrid.es/cgi-bin/historica?TITN=378876
 language: Español
 relation: Es versión de dbitem1000180103 ; se basa en dbitem1000170104
-rights: https://creativecommons.org/licenses/by-nc/2.5/es/
+rights: <a href="https://creativecommons.org/licenses/by-nc/2.5/es/">https://creativecommons.org/licenses/by-nc/2.5/es/</a>
 dc: "/dc_records/dbitem3000180102"
 order: '22'
 layout: damaboba_item
