--- a/_damaboba/dbitem3000200304.md
+++ b/_damaboba/dbitem3000200304.md
@@ -12,7 +12,7 @@ repository: Biblioteca Digital Memoriademadrid
 source: http://www.memoriademadrid.es/buscador.php?accion=VerFicha&id=10952
 language:
 relation: Se aproxima a dbitem000190301 ; es parte de dbitem0100200302
-rights: http://creativecommons.org/licenses/by-nc/2.5/
+rights: <a href="https://creativecommons.org/licenses/by-nc/2.5/es/">https://creativecommons.org/licenses/by-nc/2.5/es/</a>
 dc: "/dc_records/dbitem3000200304"
 order: '12'
 layout: damaboba_item
