--- a/_damaboba/dbitem5000190107.md
+++ b/_damaboba/dbitem5000190107.md
@@ -12,7 +12,7 @@ repository: Col·lecció digital Biblioescènic del MAE ; Biblioteca Institut de
 source: https://cataleg.cdmae.cat/cgi-bin/koha/opac-detail.pl?biblionumber=40847
 language: Español
 relation: Se basa en dbitem0000190103
-rights: http://creativecommons.org/licenses/by-nc/2.5/
+rights: <a href="https://creativecommons.org/licenses/by-nc/2.5/es/">https://creativecommons.org/licenses/by-nc/2.5/es/</a>
 dc: "/dc_records/dbitem5000190107"
 order: '13'
 layout: damaboba_item
