--- a/_damaboba/dbitem9000190113.md
+++ b/_damaboba/dbitem9000190113.md
@@ -13,7 +13,7 @@ repository: Biblioteca Digital de la Comunidad de Madrid
 source: https://bibliotecavirtualmadrid.comunidad.madrid/bvmadrid_publicacion/es/consulta/registro.do?id=25680
 language: Francés
 relation: Se aproxima a dbitem0000190239
-rights: http://creativecommons.org/publicdomain/mark/1.0/
+rights: <a href="http://creativecommons.org/publicdomain/mark/1.0/">http://creativecommons.org/publicdomain/mark/1.0/</a>
 dc: "/dc_records/dbitem9000190113"
 order: '05'
 layout: damaboba_item
