--- a/_damaboba/dbitem0000190301.md
+++ b/_damaboba/dbitem0000190301.md
@@ -13,8 +13,8 @@ repository: 'Biblioteca Virtual de Prensa Histórica: <i>La Revista moderna</i> 
   8)'
 source: https://prensahistorica.mcu.es/es/catalogo_imagenes/grupo.do?path=7151469&posicion=8&presentacion=pagina
 language:
-relation: Se aproxima a "/damaboba/dbitem0000190501/"
-rights: "http://creativecommons.org/licenses/by-nc-sa/4.0/"
+relation: Se aproxima a dbitem0000190501
+rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem0000190301"
 order: '00'
 layout: damaboba_item
