--- a/_damaboba/dbitem1000170101.md
+++ b/_damaboba/dbitem1000170101.md
@@ -13,7 +13,7 @@ repository: Biblioteca Digital Hispánica
 source: http://bdh.bne.es/bnesearch/detalle/bdh0000051826
 language: Español
 relation:
-rights: http://creativecommons.org/licenses/by-nc-sa/4.0/
+rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000170101"
 order: '29'
 layout: damaboba_item
