--- a/_damaboba/dbitem1000170102.md
+++ b/_damaboba/dbitem1000170102.md
@@ -13,7 +13,7 @@ repository: Biblioteca Digital Hispánica
 source: http://bdh.bne.es/bnesearch/detalle/bdh0000050958
 language: Español
 relation: Se basa en /img/dbitem0000170201
-rights: http://creativecommons.org/licenses/by-nc-sa/4.0/
+rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000170102"
 order: '30'
 layout: damaboba_item
