--- a/_damaboba/dbitem1000170103.md
+++ b/_damaboba/dbitem1000170103.md
@@ -14,7 +14,7 @@ repository: Biblioteca Digital Hispánica
 source: http://bdh.bne.es/bnesearch/detalle/bdh0000014188
 language: Español
 relation:
-rights: http://creativecommons.org/licenses/by-nc-sa/4.0/
+rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000170103"
 order: '25'
 layout: damaboba_item
