--- a/_damaboba/dbitem1000200502.md
+++ b/_damaboba/dbitem1000200502.md
@@ -13,7 +13,7 @@ repository: Hemeroteca Digital Hispánica
 source: http://hemerotecadigital.bne.es/issue.vm?id=0002092091&search=&lang=es
 language:
 relation: Se aproxima a dbitem0000190501 ; se basa en dbitem0000190301
-rights: http://creativecommons.org/licenses/by-nc-sa/4.0/
+rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000200502"
 order: '15'
 layout: damaboba_item
