--- a/_damaboba/dbitem1100200107.md
+++ b/_damaboba/dbitem1100200107.md
@@ -13,7 +13,7 @@ repository: University of Toronto - Robarts Library ; Internet Archives
 source: https://archive.org/details/teatrove01vega/mode/2up
 language: Español
 relation: Se basa en dbitem1000190102
-rights: https://creativecommons.org/publicdomain/zero/1.0/
+rights: <a href="https://creativecommons.org/publicdomain/zero/1.0/">https://creativecommons.org/publicdomain/zero/1.0/</a>
 dc: "/dc_records/dbitem1100200107"
 order: '18'
 layout: damaboba_item
