--- a/_damaboba/dbitem3000190105.md
+++ b/_damaboba/dbitem3000190105.md
@@ -14,7 +14,7 @@ repository: Biblioteca Histórica de Madrid
 source: http://catalogos.munimadrid.es/cgi-bin/historica?TITN=344856
 language: Español
 relation: Se basa en dbitem0000190103
-rights: http://creativecommons.org/licenses/by-nc/2.5/
+rights: <a href="https://creativecommons.org/licenses/by-nc/2.5/es/">https://creativecommons.org/licenses/by-nc/2.5/es/</a>
 dc: "/dc_records/dbitem0000190105"
 order: '24'
 layout: damaboba_item
