--- a/_damaboba/dbitem2000200305.md
+++ b/_damaboba/dbitem2000200305.md
@@ -12,7 +12,7 @@ object_type: Óleo sobre lienzo
 repository: Museo Nacional del Prado
 source: https://www.museodelprado.es/coleccion/obra-de-arte/la-actriz-doa-maria-guerrero-como-la-dama-boba/d14cf38e-41f1-441b-976c-a0be42f09277?searchid=0fb2dfba-745a-a89e-9e2d-f2e3d9909f2c
 language:
-relation: Es versión de dbitem1300190302 ; se aproxima a dbitem0000190501
+relation: Es versión de <a href="/damaboba/damaboba/dbitem1300190302/">dbitem1300190302</a> ; se aproxima a <a href="/damaboba/damaboba/dbitem0000190501/">dbitem0000190501</a>
 rights: Copyright Museo del Prado,  todos los derechos reservados.
 dc: "/dc_records/dbitem0000190501"
 order: '09'
