--- a/_damaboba/dbitem3000190104.md
+++ b/_damaboba/dbitem3000190104.md
@@ -14,7 +14,7 @@ object_type: Manuscrito
 repository: Biblioteca Histórica de Madrid
 source: http://catalogos.munimadrid.es/cgi-bin/historica?TITN=344852
 language: Español
-relation: Se basa en dbitem0000190103
+relation: Se basa en <a href="/damaboba/damaboba/dbitem0000190103/">dbitem0000190103</a>
 rights: <a href="https://creativecommons.org/licenses/by-nc/2.5/es/">https://creativecommons.org/licenses/by-nc/2.5/es/</a>
 dc: "/dc_records/dbitem3000190104"
 order: '23'
