--- a/_damaboba/dbitem1000170105.md
+++ b/_damaboba/dbitem1000170105.md
@@ -13,7 +13,7 @@ object_type: Impreso
 repository: Biblioteca Digital Hispánica
 source: http://bdh.bne.es/bnesearch/detalle/bdh0000088428
 language: Español
-relation: 'Es versión de dbitem1000170103 '
+relation: Es versión de <a href="/damaboba/damaboba/dbitem1000170103/">dbitem1000170103</a>
 rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000170105"
 order: '27'
