--- a/_damaboba/dbitem1000190109.md
+++ b/_damaboba/dbitem1000190109.md
@@ -12,7 +12,7 @@ object_type: Impreso
 repository: Biblioteca Digital Hispánica
 source: http://bdh.bne.es/bnesearch/detalle/bdh0000089190
 language: Español
-relation: Se basa en dbitem1000190102 ; es parte de dbitemdbitem1000190108
+relation: Se basa en <a href="/damaboba/damaboba/dbitem1000190102/">dbitem1000190102</a> ; es parte de <a href="/damaboba/damaboba/dbitemdbitem1000190108/">dbitemdbitem1000190108</a>
 rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000190109"
 order: '19'
