--- a/_damaboba/dbitem1000200307.md
+++ b/_damaboba/dbitem1000200307.md
@@ -12,7 +12,7 @@ object_type: Óleo sobre lienzo
 repository: Hemeroteca Digital Hispánica
 source: http://hemerotecadigital.bne.es/issue.vm?id=0003470710&page=3
 language:
-relation: Se aproxima a dbitem0000190501
+relation: Se aproxima a <a href="/damaboba/damaboba/dbitem0000190501/">dbitem0000190501</a>
 rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000200307"
 order: '06'
