--- a/_damaboba/dbitem6000190106.md
+++ b/_damaboba/dbitem6000190106.md
@@ -13,7 +13,7 @@ object_type: Manuscrito
 repository: Biblioteca Menéndez Pelayo
 source: BMP, Manuscrito 420
 language: Español
-relation: Se basa en dbitem0000190103
+relation: Se basa en <a href="/damaboba/damaboba/dbitem0000190103/">dbitem0000190103</a>
 rights: Copyright BMP, todos los derechos reservados
 dc: "/dc_records/dbitem6000190106"
 order: '04'
