--- a/_damaboba/dbitem1500200124.md
+++ b/_damaboba/dbitem1500200124.md
@@ -1,14 +1,10 @@
 ---
 pid: dbitem1500200124
-label: Expediente que de censura que contiene el texto de la adaptación de la obra
-  realizada por Federico García Lorca para su representación en el tricentenario de
-  la muerte Lope de Vega. En 4º; 111 p. No se sabe nada de la procedencia del texto,
-  pero pudiera ser una refundición del texto de Diego San José y Rafaela Abadía
-creator: Vega Carpio, Lope de ; Schevill, Rudolph [editor]
+label: Expediente de censura de la adaptación de la obra "La dama boba"
+creator: Vega Carpio, Lope de ; García Lorca, Federico [adaptador]
 description: Expediente que de censura que contiene el texto de la adaptación de la
   obra realizada por Federico García Lorca para su representación en el tricentenario
-  de la muerte Lope de Vega. En 4º; 111 p. No se sabe nada de la procedencia del texto,
-  pero pudiera ser una refundición del texto de Diego San José y Rafaela Abadía
+  de la muerte Lope de Vega. En 4º; 111 p.
 publisher:
 contributor:
 _date: '1935'
