Revert "Update dbitem1500200124.md"
This reverts commit fc56e29e51abd2910f011405c587a49e43ff508b.

--- a/_damaboba/dbitem1500200124.md
+++ b/_damaboba/dbitem1500200124.md
@@ -1,10 +1,14 @@
 ---
 pid: dbitem1500200124
-label: Expediente de censura de la adaptación de la obra "La dama boba"
-creator: Vega Carpio, Lope de ; García Lorca, Federico [adaptador]
+label: Expediente que de censura que contiene el texto de la adaptación de la obra
+  realizada por Federico García Lorca para su representación en el tricentenario de
+  la muerte Lope de Vega. En 4º; 111 p. No se sabe nada de la procedencia del texto,
+  pero pudiera ser una refundición del texto de Diego San José y Rafaela Abadía
+creator: Vega Carpio, Lope de ; Schevill, Rudolph [editor]
 description: Expediente que de censura que contiene el texto de la adaptación de la
   obra realizada por Federico García Lorca para su representación en el tricentenario
-  de la muerte Lope de Vega. En 4º; 111 p.
+  de la muerte Lope de Vega. En 4º; 111 p. No se sabe nada de la procedencia del texto,
+  pero pudiera ser una refundición del texto de Diego San José y Rafaela Abadía
 publisher:
 contributor:
 _date: '1935'
