Arreglo de errores en descripciones

--- a/_damaboba/dbitem1300190302.md
+++ b/_damaboba/dbitem1300190302.md
@@ -11,13 +11,10 @@ object_type: Fotografía
 repository: CER.ES ; Museo Sorolla
 source: http://ceres.mcu.es/pages/Main?idt=9141&inventary=81583&table=FDOC&museum=MSM
 language:
-relation: Se aproxima a <a href="/damaboba/damaboba/dbitem1300190302/">dbitem1300190302</a>
+relation: Se aproxima a dbitem1300190302
 rights: Copyright Museo Sorolla, todos los derechos reservados
 dc: "/dc_records/dbitem1300190302"
-order: '07'
+order: '31'
 layout: damaboba_item
 collection: damaboba
-thumbnail: "/img/derivatives/iiif/images/dbitem1300190302/full/250,/0/default.jpg"
-full: "/img/derivatives/iiif/images/dbitem1300190302/full/1140,/0/default.jpg"
-manifest: "/img/derivatives/iiif/dbitem1300190302/manifest.json"
 ---
