--- a/_damaboba/dbitem3000180102.md
+++ b/_damaboba/dbitem3000180102.md
@@ -13,13 +13,10 @@ object_type: Impreso
 repository: Biblioteca Histórica de Madrid
 source: http://catalogos.munimadrid.es/cgi-bin/historica?TITN=378876
 language: Español
-relation: Es versión de <a href="/damaboba/damaboba/dbitem1000180103/">dbitem1000180103</a> ; se basa en <a href="/damaboba/damaboba/dbitem1000170104/">dbitem1000170104</a>
+relation: Es versión de dbitem1000180103 ; se basa en dbitem1000170104
 rights: <a href="https://creativecommons.org/licenses/by-nc/2.5/es/">https://creativecommons.org/licenses/by-nc/2.5/es/</a>
 dc: "/dc_records/dbitem3000180102"
-order: '22'
+order: '21'
 layout: damaboba_item
 collection: damaboba
-thumbnail: "/img/derivatives/iiif/images/dbitem3000180102_00/full/250,/0/default.jpg"
-manifest: "/img/derivatives/iiif/dbitem3000180102/manifest.json"
-full: "/img/derivatives/iiif/images/dbitem3000180102_00/full/1140,/0/default.jpg"
 ---
