--- a/_damaboba/dbitem3000200304.md
+++ b/_damaboba/dbitem3000200304.md
@@ -11,13 +11,10 @@ object_type: Tarjeta postal
 repository: Biblioteca Digital Memoriademadrid
 source: http://www.memoriademadrid.es/buscador.php?accion=VerFicha&id=10952
 language:
-relation: Se aproxima a <a href="/damaboba/damaboba/dbitem000190301/">dbitem000190301</a> ; es parte de <a href="/damaboba/damaboba/dbitem0100200302/">dbitem0100200302</a>
+relation: Se aproxima a dbitem000190301 ; es parte de dbitem0100200302
 rights: <a href="https://creativecommons.org/licenses/by-nc/2.5/es/">https://creativecommons.org/licenses/by-nc/2.5/es/</a>
 dc: "/dc_records/dbitem3000200304"
-order: '12'
+order: '24'
 layout: damaboba_item
 collection: damaboba
-thumbnail: "/img/derivatives/iiif/images/dbitem3000200304_0/full/250,/0/default.jpg"
-full: "/img/derivatives/iiif/images/dbitem3000200304_0/full/1140,/0/default.jpg"
-manifest: "/img/derivatives/iiif/dbitem3000200304/manifest.json"
 ---
