--- a/_damaboba/dbitem1000170104.md
+++ b/_damaboba/dbitem1000170104.md
@@ -11,13 +11,10 @@ object_type: Impreso
 repository: Biblioteca Digital Hispánica
 source: http://bdh.bne.es/bnesearch/detalle/bdh0000014188
 language: Español
-relation: Se aproxima a <a href="/damaboba/damaboba/dbitem1000170102/">dbitem1000170102</a> ; es parte de <a href="/damaboba/damaboba/dbitem1000170103/">dbitem1000170103</a>
+relation: Se aproxima a dbitem1000170102 ; es parte de dbitem1000170103
 rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000170104"
-order: '26'
+order: '07'
 layout: damaboba_item
 collection: damaboba
-thumbnail: "/img/derivatives/iiif/images/dbitem1000170104_00/full/250,/0/default.jpg"
-manifest: "/img/derivatives/iiif/dbitem1000170104/manifest.json"
-full: "/img/derivatives/iiif/images/dbitem1000170104_00/full/1140,/0/default.jpg"
 ---
