--- a/_damaboba/dbitem1000170105.md
+++ b/_damaboba/dbitem1000170105.md
@@ -13,13 +13,10 @@ object_type: Impreso
 repository: Biblioteca Digital Hispánica
 source: http://bdh.bne.es/bnesearch/detalle/bdh0000088428
 language: Español
-relation: Es versión de <a href="/damaboba/damaboba/dbitem1000170103/">dbitem1000170103</a>
+relation: 'Es versión de dbitem1000170103 '
 rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000170105"
-order: '27'
+order: '08'
 layout: damaboba_item
 collection: damaboba
-thumbnail: "/img/derivatives/iiif/images/dbitem1000170105_0/full/250,/0/default.jpg"
-manifest: "/img/derivatives/iiif/dbitem1000170105/manifest.json"
-full: "/img/derivatives/iiif/images/dbitem1000170105_0/full/1140,/0/default.jpg"
 ---
