--- a/_damaboba/dbitem1000180101.md
+++ b/_damaboba/dbitem1000180101.md
@@ -13,13 +13,10 @@ object_type: Impreso
 repository: Biblioteca Digital Hispánica
 source: http://bdh.bne.es/bnesearch/detalle/bdh0000055229
 language: Español
-relation: Se basa en <a href="/damaboba/damaboba/dbitem1000170104/">dbitem1000170104</a>
+relation: Se basa en dbitem1000170104
 rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000180101"
-order: '20'
+order: '10'
 layout: damaboba_item
 collection: damaboba
-thumbnail: "/img/derivatives/iiif/images/dbitem1000180101_00/full/250,/0/default.jpg"
-manifest: "/img/derivatives/iiif/dbitem1000180101/manifest.json"
-full: "/img/derivatives/iiif/images/dbitem1000180101_00/full/1140,/0/default.jpg"
 ---
