--- a/_damaboba/dbitem1200200106.md
+++ b/_damaboba/dbitem1200200106.md
@@ -1,7 +1,7 @@
 ---
 pid: dbitem1200200106
 label: The dramatic art of Lope de Vega, together with La dama boba
-creator: Vega Carpio, Lope de ; García Lorca, Federico [adaptador]
+creator: Vega Carpio, Lope de ; Schevill, Rudolph [editor]
 description: Primera edición crítica basada en el manuscrito autógrafo de Lope de
   Vega. 340 p. 25 cm
 publisher: 'Berkeley: University of California press'
@@ -11,13 +11,10 @@ object_type: Impreso
 repository: Hathi Trust Digital Library
 source: https://catalog.hathitrust.org/Record/100760255
 language: Español
-relation: Se basa en <a href="/damaboba/damaboba/dbitem1000170101/">dbitem1000170101</a>
+relation: Se basa en dbitem1000170101
 rights: <a href="https://www.hathitrust.org/access_use#pd">https://www.hathitrust.org/access_use#pd</a>
 dc: "/dc_records/dbitem1200200106"
 order: '19'
 layout: damaboba_item
 collection: damaboba
-thumbnail: "/img/derivatives/iiif/images/dbitem1200200106_000/full/250,/0/default.jpg"
-manifest: "/img/derivatives/iiif/dbitem1200200106/manifest.json"
-full: "/img/derivatives/iiif/images/dbitem1200200106_000/full/1140,/0/default.jpg"
 ---
