--- a/_damaboba/dbitem1500200124.md
+++ b/_damaboba/dbitem1500200124.md
@@ -1,14 +1,10 @@
 ---
 pid: dbitem1500200124
-label: Expediente que de censura que contiene el texto de la adaptación de la obra
-  realizada por Federico García Lorca para su representación en el tricentenario de
-  la muerte Lope de Vega. En 4º; 111 p. No se sabe nada de la procedencia del texto,
-  pero pudiera ser una refundición del texto de Diego San José y Rafaela Abadía
-creator: Vega Carpio, Lope de ; Schevill, Rudolph [editor]
+label: Expediente de censura de la adaptación de la obra "La dama boba"
+creator: Vega Carpio, Lope de ; García Lorca, Federico [adaptador]
 description: Expediente que de censura que contiene el texto de la adaptación de la
   obra realizada por Federico García Lorca para su representación en el tricentenario
-  de la muerte Lope de Vega. En 4º; 111 p. No se sabe nada de la procedencia del texto,
-  pero pudiera ser una refundición del texto de Diego San José y Rafaela Abadía
+  de la muerte Lope de Vega.
 publisher:
 contributor:
 _date: '1935'
@@ -16,13 +12,10 @@ object_type: Mecanoscrito
 repository: Archivo General de la Administración
 source: http://pares.mcu.es/ParesBusquedas20/catalogo/description/3536579
 language: Español
-relation: Se basa en <a href="/damaboba/damaboba/dbitem1000190102/">dbitem1000190102</a>
+relation: Se basa en dbitem1000190102
 rights: Copyright AGA, todos los derechos reservados
 dc: "/dc_records/dbitem1500200124"
-order: '11'
+order: '20'
 layout: damaboba_item
 collection: damaboba
-thumbnail: "/img/derivatives/iiif/images/dbitem1500200124_21-05780-00006-001/full/250,/0/default.jpg"
-full: "/img/derivatives/iiif/images/dbitem1500200124_21-05780-00006-001/full/1140,/0/default.jpg"
-manifest: "/img/derivatives/iiif/dbitem1500200124/manifest.json"
 ---
