--- a/_damaboba/dbitem3000190105.md
+++ b/_damaboba/dbitem3000190105.md
@@ -13,13 +13,10 @@ object_type: Manuscrito
 repository: Biblioteca Histórica de Madrid
 source: http://catalogos.munimadrid.es/cgi-bin/historica?TITN=344856
 language: Español
-relation: Se basa en <a href="/damaboba/damaboba/dbitem0000190103/">dbitem0000190103</a>
+relation: Se basa en dbitem0000190103
 rights: <a href="https://creativecommons.org/licenses/by-nc/2.5/es/">https://creativecommons.org/licenses/by-nc/2.5/es/</a>
 dc: "/dc_records/dbitem0000190105"
-order: '24'
+order: '23'
 layout: damaboba_item
 collection: damaboba
-thumbnail: "/img/derivatives/iiif/images/dbitem3000190105_000/full/250,/0/default.jpg"
-manifest: "/img/derivatives/iiif/dbitem3000190105/manifest.json"
-full: "/img/derivatives/iiif/images/dbitem3000190105_000/full/1140,/0/default.jpg"
 ---
