arreglo en búsqueda

--- a/_damaboba/dbitem1500200124.md
+++ b/_damaboba/dbitem1500200124.md
@@ -4,7 +4,7 @@ label: Expediente de censura de la adaptación de la obra "La dama boba"
 creator: Vega Carpio, Lope de ; García Lorca, Federico [adaptador]
 description: Expediente que de censura que contiene el texto de la adaptación de la
   obra realizada por Federico García Lorca para su representación en el tricentenario
-  de la muerte Lope de Vega.
+  de la muerte Lope de Vega. En 4º; 111 p.
 publisher:
 contributor:
 _date: '1935'
