revisión de arreglos anteriores

--- a/_damaboba/dbitem1000170102.md
+++ b/_damaboba/dbitem1000170102.md
@@ -18,4 +18,6 @@ dc: "/dc_records/dbitem1000170102"
 order: '05'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000170102_000/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000170102/manifest.json"
 ---
