--- a/_damaboba/dbitem1000170104.md
+++ b/_damaboba/dbitem1000170104.md
@@ -17,4 +17,6 @@ dc: "/dc_records/dbitem1000170104"
 order: '07'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000170104_00/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000170104/manifest.json"
 ---
