--- a/_damaboba/dbitem1000190112.md
+++ b/_damaboba/dbitem1000190112.md
@@ -17,4 +17,6 @@ dc: "/dc_records/dbitem1000190112"
 order: '15'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000190112_00/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000190112/manifest.json"
 ---
