--- a/_damaboba/dbitem1000200307.md
+++ b/_damaboba/dbitem1000200307.md
@@ -18,4 +18,6 @@ dc: "/dc_records/dbitem1000200307"
 order: '30'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000200307/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000200307/manifest.json"
 ---
