--- a/_damaboba/dbitem1000200502.md
+++ b/_damaboba/dbitem1000200502.md
@@ -18,4 +18,6 @@ dc: "/dc_records/dbitem1000200502"
 order: '16'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000200502_0/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000200502/manifest.json"
 ---
