--- a/_damaboba/dbitem1200200106.md
+++ b/_damaboba/dbitem1200200106.md
@@ -17,4 +17,6 @@ dc: "/dc_records/dbitem1200200106"
 order: '19'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1200200106_000/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1200200106/manifest.json"
 ---
