--- a/_damaboba/dbitem2000200305.md
+++ b/_damaboba/dbitem2000200305.md
@@ -18,4 +18,6 @@ dc: "/dc_records/dbitem0000190501"
 order: '33'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem2000200305/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem2000200305/manifest.json"
 ---
