--- a/_damaboba/dbitem3000200304.md
+++ b/_damaboba/dbitem3000200304.md
@@ -17,4 +17,6 @@ dc: "/dc_records/dbitem3000200304"
 order: '24'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem3000200304_0/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem3000200304/manifest.json"
 ---
