--- a/_damaboba/dbitem5000190107.md
+++ b/_damaboba/dbitem5000190107.md
@@ -17,4 +17,6 @@ dc: "/dc_records/dbitem5000190107"
 order: '25'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem5000190107_00/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem5000190107/manifest.json"
 ---
