--- a/_damaboba/dbitem8000190502.md
+++ b/_damaboba/dbitem8000190502.md
@@ -18,4 +18,6 @@ dc: "/dc_records/dbitem8000190502"
 order: '28'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem8000190502_La Dama Boba-01/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem8000190502/manifest.json"
 ---
