--- a/_damaboba/dbitem0000190301.md
+++ b/_damaboba/dbitem0000190301.md
@@ -19,4 +19,6 @@ dc: "/dc_records/dbitem0100200302"
 order: '00'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem0000190301/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem0000190301/manifest.json"
 ---
