--- a/_damaboba/dbitem0100200302.md
+++ b/_damaboba/dbitem0100200302.md
@@ -17,4 +17,6 @@ dc: "/dc_records/dbitem0000190302"
 order: '02'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem0100200302_01Small/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem0100200302/manifest.json"
 ---
