--- a/_damaboba/dbitem0100200303.md
+++ b/_damaboba/dbitem0100200303.md
@@ -18,4 +18,6 @@ dc: "/dc_records/dbitem0000190303"
 order: '03'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem0100200303_01Small/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem0100200303/manifest.json"
 ---
