--- a/_damaboba/dbitem1000170103.md
+++ b/_damaboba/dbitem1000170103.md
@@ -19,4 +19,6 @@ dc: "/dc_records/dbitem1000170103"
 order: '06'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000170103_00/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000170103/manifest.json"
 ---
