--- a/_damaboba/dbitem1000190109.md
+++ b/_damaboba/dbitem1000190109.md
@@ -18,4 +18,6 @@ dc: "/dc_records/dbitem1000190109"
 order: '14'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000190109_00/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000190109/manifest.json"
 ---
