--- a/_damaboba/dbitem1300190302.md
+++ b/_damaboba/dbitem1300190302.md
@@ -17,4 +17,6 @@ dc: "/dc_records/dbitem1300190302"
 order: '31'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1300190302/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1300190302/manifest.json"
 ---
