--- a/_damaboba/dbitem1500200124.md
+++ b/_damaboba/dbitem1500200124.md
@@ -18,4 +18,6 @@ dc: "/dc_records/dbitem1500200124"
 order: '20'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1500200124_21-05780-00006-001/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1500200124/manifest.json"
 ---
