--- a/_damaboba/dbitem2000200306.md
+++ b/_damaboba/dbitem2000200306.md
@@ -18,4 +18,6 @@ dc: "/dc_records/dbitem2000200306"
 order: '34'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem2000200306/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem2000200306/manifest.json"
 ---
