--- a/_damaboba/dbitem6000190106.md
+++ b/_damaboba/dbitem6000190106.md
@@ -19,4 +19,6 @@ dc: "/dc_records/dbitem6000190106"
 order: '26'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem6000190106_000/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem6000190106/manifest.json"
 ---
