--- a/_damaboba/dbitem7000190110.md
+++ b/_damaboba/dbitem7000190110.md
@@ -17,4 +17,6 @@ dc: "/dc_records/dbitem7000190110"
 order: '27'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem7000190110_00/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem7000190110/manifest.json"
 ---
