enlaces en elementos

--- a/_damaboba/dbitem1500200124.md
+++ b/_damaboba/dbitem1500200124.md
@@ -12,7 +12,7 @@ object_type: Mecanoscrito
 repository: Archivo General de la Administración
 source: http://pares.mcu.es/ParesBusquedas20/catalogo/description/3536579
 language: Español
-relation: Se basa en dbitem1000190102
+relation: Se basa en <a href="/damaboba/damaboba/dbitem1000190102/">dbitem1000190102</a>
 rights: Copyright AGA, todos los derechos reservados
 dc: "/dc_records/dbitem1500200124"
 order: '20'
