--- a/_damaboba/dbitem1000180103.md
+++ b/_damaboba/dbitem1000180103.md
@@ -13,7 +13,7 @@ object_type: Impreso
 repository: Biblioteca Digital Hispánica
 source: http://bdh.bne.es/bnesearch/detalle/bdh0000055222
 language: Español
-relation: Es versión de dbitem3000180102 ; dbitem1000170104
+relation: Es versión de <a href="/damaboba/damaboba/dbitem3000180102/">dbitem3000180102</a> ; se basa en <a href="/damaboba/damaboba/dbitem1000170104/">dbitem1000170104</a>
 rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000180103"
 order: '11'
