cambios autoría Fernández-Guerra

--- a/_damaboba/dbitem5000190107.md
+++ b/_damaboba/dbitem5000190107.md
@@ -1,7 +1,8 @@
 ---
 pid: dbitem5000190107
 label: Buen maestro es amor ó la niña tonta
-creator: Vega Carpio, Lope de ; Solís, Dionisio [refundidor]
+creator: Vega Carpio, Lope de ; Solís, Dionisio [refundidor] ; Fernández-Guerra, José
+  [refundidor]
 description: 'Manuscrito autógrafo de José Fernández Guerra. Contiene lecturas de
   otros manuscritos de la obra. En port.: "Refda. por Jose Frnz-Guerra". 23 h. '
 publisher:
