--- a/_damaboba/dbitem6000190106.md
+++ b/_damaboba/dbitem6000190106.md
@@ -1,8 +1,7 @@
 ---
 pid: dbitem6000190106
 label: Buen Maestro es amor ó La Niña Boba
-creator: Vega Carpio, Lope de ; Solís, Dionisio [refundidor] ; Fernández-Guerra, José
-  [copista?]
+creator: Vega Carpio, Lope de ; Solís, Dionisio [refundidor]
 description: 'Copia manuscrita preservada en la Biblioteca Menéndez Pelayo, compuesta
   por tres cuadernos. Cada cuaderno está escrito por una mano y el tercero, por dos.
   31 h.; 31 h.; 30 h. En port.: "Empresa"'
