Revert "cambios autoría Fernández-Guerra"
This reverts commit da145c358b90f684cf8f7f6b2d69467beb23e0f2.

--- a/_damaboba/dbitem6000190106.md
+++ b/_damaboba/dbitem6000190106.md
@@ -1,7 +1,8 @@
 ---
 pid: dbitem6000190106
 label: Buen Maestro es amor ó La Niña Boba
-creator: Vega Carpio, Lope de ; Solís, Dionisio [refundidor]
+creator: Vega Carpio, Lope de ; Solís, Dionisio [refundidor] ; Fernández-Guerra, José
+  [copista?]
 description: 'Copia manuscrita preservada en la Biblioteca Menéndez Pelayo, compuesta
   por tres cuadernos. Cada cuaderno está escrito por una mano y el tercero, por dos.
   31 h.; 31 h.; 30 h. En port.: "Empresa"'
