Revert "enlaces en elementos"
This reverts commit 70ae3b85d1ca16e562d4e691390bf7647e5fdef9.

--- a/_damaboba/dbitem1000170106.md
+++ b/_damaboba/dbitem1000170106.md
@@ -10,7 +10,7 @@ object_type: Impreso
 repository: Biblioteca Digital Hispánica
 source: http://bdh.bne.es/bnesearch/detalle/bdh0000088428
 language: Español
-relation: Es parte de <a href="/damaboba/damaboba/dbitem1000170105/">dbitem1000170105</a> ; es versión de <a href="/damaboba/damaboba/dbitem1000170104/">dbitem1000170104</a>
+relation: Es parte de dbitem1000170105 ; es versión de dbitem1000170104
 rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000170106"
 order: '09'
