--- a/_damaboba/dbitem1000190102.md
+++ b/_damaboba/dbitem1000190102.md
@@ -12,7 +12,7 @@ object_type: Impreso
 repository: Biblioteca Nacional de España
 source: http://catalogo.bne.es/uhtbin/cgisirsi/x/0/0/57/20/HA2F7776+T.+2/0/X1000554744?user_id=WEBSERVER
 language: Español
-relation: Se basa en <a href="/damaboba/damaboba/dbitem1000170102/">dbitem1000170102</a> ; es parte de <a href="/damaboba/damaboba/dbitem1000190101/">dbitem1000190101</a>
+relation: Se basa en dbitem1000190102 ; es parte de dbitem1000190108
 rights: Copyright BNE, todos los derechos reservados
 dc: "/dc_records/dbitem1000190102"
 order: '13'
