--- a/_damaboba/dbitem1000190112.md
+++ b/_damaboba/dbitem1000190112.md
@@ -11,7 +11,7 @@ object_type: Impreso
 repository: Biblioteca Nacional de España
 source: http://catalogo.bne.es/uhtbin/cgisirsi/x/0/0/57/20/R.MICRO2F17479/0/X1105242312?user_id=WEBSERVER
 language: Español
-relation: Se basa en <a href="/damaboba/damaboba/dbitem1000190102/">dbitem1000190102</a> ; es parte de <a href="/damaboba/damaboba/dbitem8000190502/">dbitem8000190502</a>
+relation: Se basa en dbitem1000190102 ; es parte de dbitem8000190502
 rights: Copyright BNE, todos los derechos reservados
 dc: "/dc_records/dbitem1000190112"
 order: '15'
