--- a/_damaboba/dbitem1200200106.md
+++ b/_damaboba/dbitem1200200106.md
@@ -11,7 +11,7 @@ object_type: Impreso
 repository: Hathi Trust Digital Library
 source: https://catalog.hathitrust.org/Record/100760255
 language: Español
-relation: Se basa en <a href="/damaboba/damaboba/dbitem1000170101/">dbitem1000170101</a>
+relation: Se basa en dbitem1000170101
 rights: <a href="https://www.hathitrust.org/access_use#pd">https://www.hathitrust.org/access_use#pd</a>
 dc: "/dc_records/dbitem1200200106"
 order: '19'
