--- a/_damaboba/dbitem1300190302.md
+++ b/_damaboba/dbitem1300190302.md
@@ -11,7 +11,7 @@ object_type: Fotografía
 repository: CER.ES ; Museo Sorolla
 source: http://ceres.mcu.es/pages/Main?idt=9141&inventary=81583&table=FDOC&museum=MSM
 language:
-relation: Se aproxima a <a href="/damaboba/damaboba/dbitem0000190301/">dbitem0000190301</a>
+relation: Se aproxima a dbitem1300190302
 rights: Copyright Museo Sorolla, todos los derechos reservados
 dc: "/dc_records/dbitem1300190302"
 order: '31'
