--- a/_damaboba/dbitem3000200304.md
+++ b/_damaboba/dbitem3000200304.md
@@ -11,7 +11,7 @@ object_type: Tarjeta postal
 repository: Biblioteca Digital Memoriademadrid
 source: http://www.memoriademadrid.es/buscador.php?accion=VerFicha&id=10952
 language:
-relation: Se aproxima a <a href="/damaboba/damaboba/dbitem000190301/">dbitem000190301</a> ; se basa en <a href="/damaboba/damaboba/dbitem0100200302/">dbitem0100200302</a>
+relation: Se aproxima a dbitem000190301 ; es parte de dbitem0100200302
 rights: <a href="https://creativecommons.org/licenses/by-nc/2.5/es/">https://creativecommons.org/licenses/by-nc/2.5/es/</a>
 dc: "/dc_records/dbitem3000200304"
 order: '24'
