--- a/_damaboba/dbitem0100200303.md
+++ b/_damaboba/dbitem0100200303.md
@@ -12,9 +12,9 @@ object_type: Tarjeta Postal
 repository: Colección Privada
 source:
 language:
-relation: Se aproxima a <a href="/damaboba/damaboba/dbitem0100200301/">dbitem0100200301</a>
+relation: Se aproxima a /img/dbitem0100200301
 rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
-dc: "/dc_records/dbitem0100200303"
+dc: "/dc_records/dbitem0000190303"
 order: '03'
 layout: damaboba_item
 collection: damaboba
