--- a/_damaboba/dbitem1100200107.md
+++ b/_damaboba/dbitem1100200107.md
@@ -12,7 +12,7 @@ object_type: Impreso
 repository: University of Toronto - Robarts Library ; Internet Archives
 source: https://archive.org/details/teatrove01vega/mode/2up
 language: Español
-relation: Se basa en <a href="/damaboba/damaboba/dbitem1000190102/">dbitem1000190102</a>
+relation: Se basa en dbitem1000190102
 rights: <a href="https://creativecommons.org/publicdomain/zero/1.0/">https://creativecommons.org/publicdomain/zero/1.0/</a>
 dc: "/dc_records/dbitem1100200107"
 order: '18'
