Revert "Arreglo de errores en descripciones"
This reverts commit 8a81f567fbe9cff1c86672eb345b8627efe40b93.

--- a/_damaboba/dbitem0000190301.md
+++ b/_damaboba/dbitem0000190301.md
@@ -2,7 +2,7 @@
 pid: dbitem0000190301
 label: María Guerrero como Clara en <i>La niña boba</i>
 creator: García Peris, Antonio
-description: Serie de fotografías de la actriz María Guerrero. Entre ellas aparece
+description: Serie de fotografías de la actriz María Guerrero. Entre ellas aparece retratada
   como Clara, el personaje protagonista de la refundición titulada como <i>La niña
   boba</i>. Antonio García Peris era suegro del pintor valenciano Joaquín Sorolla.
 publisher:
@@ -13,10 +13,13 @@ repository: 'Biblioteca Virtual de Prensa Histórica: <i>La Revista moderna</i> 
   8)'
 source: https://prensahistorica.mcu.es/es/catalogo_imagenes/grupo.do?path=7151469&posicion=8&presentacion=pagina
 language:
-relation: Se aproxima a /img/dbitem0000190501
+relation: Se aproxima a dbitem0000190501
 rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
-dc: "/dc_records/dbitem0100200302"
+dc: "/dc_records/dbitem0000190301"
 order: '00'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem0000190301/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem0000190301/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem0000190301/manifest.json"
 ---
