--- a/_damaboba/dbitem1000170102.md
+++ b/_damaboba/dbitem1000170102.md
@@ -12,10 +12,13 @@ object_type: Manuscrito
 repository: Biblioteca Digital Hispánica
 source: http://bdh.bne.es/bnesearch/detalle/bdh0000050958
 language: Español
-relation: Se basa en /img/dbitem0000170201
+relation: Se basa en <a href="/damaboba/damaboba/dbitem0000170201/">dbitem0000170201</a>
 rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000170102"
-order: '05'
+order: '30'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000170102_000/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000170102/manifest.json"
+full: "/img/derivatives/iiif/images/dbitem1000170102_000/full/1140,/0/default.jpg"
 ---
