--- a/_damaboba/dbitem1000200307.md
+++ b/_damaboba/dbitem1000200307.md
@@ -12,10 +12,13 @@ object_type: Óleo sobre lienzo
 repository: Hemeroteca Digital Hispánica
 source: http://hemerotecadigital.bne.es/issue.vm?id=0003470710&page=3
 language:
-relation: Se aproxima a dbitem0000190501
+relation: Se aproxima a <a href="/damaboba/damaboba/dbitem0000190501/">dbitem0000190501</a>
 rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000200307"
-order: '30'
+order: '06'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000200307/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem1000200307/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000200307/manifest.json"
 ---
