--- a/_damaboba/dbitem1000200502.md
+++ b/_damaboba/dbitem1000200502.md
@@ -12,10 +12,13 @@ object_type: Muñeca
 repository: Hemeroteca Digital Hispánica
 source: http://hemerotecadigital.bne.es/issue.vm?id=0002092091&search=&lang=es
 language:
-relation: Se aproxima a dbitem0000190501 ; se basa en dbitem0000190301
+relation: Se aproxima a <a href="/damaboba/damaboba/dbitem0000190501/">dbitem0000190501</a> ; se basa en <a href="/damaboba/damaboba/dbitem0000190301/">dbitem0000190301</a>
 rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
 dc: "/dc_records/dbitem1000200502"
-order: '16'
+order: '15'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000200502_0/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem1000200502_0/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000200502/manifest.json"
 ---
