--- a/_damaboba/dbitem1100200107.md
+++ b/_damaboba/dbitem1100200107.md
@@ -12,10 +12,13 @@ object_type: Impreso
 repository: University of Toronto - Robarts Library ; Internet Archives
 source: https://archive.org/details/teatrove01vega/mode/2up
 language: Español
-relation: Se basa en dbitem1000190102
+relation: Se basa en <a href="/damaboba/damaboba/dbitem1000190102/">dbitem1000190102</a>
 rights: <a href="https://creativecommons.org/publicdomain/zero/1.0/">https://creativecommons.org/publicdomain/zero/1.0/</a>
 dc: "/dc_records/dbitem1100200107"
 order: '18'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1100200107_000/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1100200107/manifest.json"
+full: "/img/derivatives/iiif/images/dbitem1100200107_000/full/1140,/0/default.jpg"
 ---
