--- a/_damaboba/dbitem3000190104.md
+++ b/_damaboba/dbitem3000190104.md
@@ -14,10 +14,13 @@ object_type: Manuscrito
 repository: Biblioteca Histórica de Madrid
 source: http://catalogos.munimadrid.es/cgi-bin/historica?TITN=344852
 language: Español
-relation: Se basa en dbitem0000190103
+relation: Se basa en <a href="/damaboba/damaboba/dbitem0000190103/">dbitem0000190103</a>
 rights: <a href="https://creativecommons.org/licenses/by-nc/2.5/es/">https://creativecommons.org/licenses/by-nc/2.5/es/</a>
 dc: "/dc_records/dbitem3000190104"
-order: '22'
+order: '23'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem3000190104_000/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem3000190104/manifest.json"
+full: "/img/derivatives/iiif/images/dbitem3000190104_000/full/1140,/0/default.jpg"
 ---
