--- a/_damaboba/dbitem0100200301.md
+++ b/_damaboba/dbitem0100200301.md
@@ -11,10 +11,13 @@ object_type: Tarjeta Postal
 repository: Colección Privada
 source:
 language:
-relation: Se aproxima a /img/dbitem0100200301
+relation: Se aproxima a <a href="/damaboba/damaboba/dbitem0000190301/">dbitem0000190301</a>
 rights: <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a>
-dc: "/dc_records/dbitem0000190301"
+dc: "/dc_records/dbitem0100200301"
 order: '01'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem0100200301_01Small/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem0100200301_01Small/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem0100200301/manifest.json"
 ---
