--- a/_damaboba/dbitem1000190102.md
+++ b/_damaboba/dbitem1000190102.md
@@ -12,10 +12,13 @@ object_type: Impreso
 repository: Biblioteca Nacional de España
 source: http://catalogo.bne.es/uhtbin/cgisirsi/x/0/0/57/20/HA2F7776+T.+2/0/X1000554744?user_id=WEBSERVER
 language: Español
-relation: Se basa en dbitem1000190102 ; es parte de dbitem1000190108
+relation: Se basa en <a href="/damaboba/damaboba/dbitem1000190102/">dbitem1000190102</a> ; es parte de <a href="/damaboba/damaboba/dbitem1000190108/">dbitem1000190108</a>
 rights: Copyright BNE, todos los derechos reservados
 dc: "/dc_records/dbitem1000190102"
-order: '13'
+order: '18'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1000190102_00/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1000190102/manifest.json"
+full: "/img/derivatives/iiif/images/dbitem1000190102_00/full/1140,/0/default.jpg"
 ---
