--- a/_damaboba/dbitem1100200101.md
+++ b/_damaboba/dbitem1100200101.md
@@ -12,10 +12,13 @@ object_type: Impreso
 repository: University of North Carolina at Chapel Hill ; Internet Archives
 source: https://archive.org/details/laninabobaobuenm557vega/mode/2up
 language: Español
-relation: Se aproxima a dbitem0000190103 ; se aproxima a dbitem1000170104
+relation: Se aproxima a <a href="/damaboba/damaboba/dbitem0000190103/">dbitem0000190103</a> ; se aproxima a <a href="/damaboba/damaboba/dbitem1000170104/">dbitem1000170104</a>
 rights: <a href="https://creativecommons.org/publicdomain/zero/1.0/">https://creativecommons.org/publicdomain/zero/1.0/</a>
 dc: "/dc_records/dbitem1100200101"
 order: '17'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1100200101_00/full/250,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1100200101/manifest.json"
+full: "/img/derivatives/iiif/images/dbitem1100200101_00/full/1140,/0/default.jpg"
 ---
