--- a/_damaboba/dbitem1500200124.md
+++ b/_damaboba/dbitem1500200124.md
@@ -1,10 +1,14 @@
 ---
 pid: dbitem1500200124
-label: Expediente de censura de la adaptación de la obra "La dama boba"
-creator: Vega Carpio, Lope de ; García Lorca, Federico [adaptador]
+label: Expediente que de censura que contiene el texto de la adaptación de la obra
+  realizada por Federico García Lorca para su representación en el tricentenario de
+  la muerte Lope de Vega. En 4º; 111 p. No se sabe nada de la procedencia del texto,
+  pero pudiera ser una refundición del texto de Diego San José y Rafaela Abadía
+creator: Vega Carpio, Lope de ; Schevill, Rudolph [editor]
 description: Expediente que de censura que contiene el texto de la adaptación de la
   obra realizada por Federico García Lorca para su representación en el tricentenario
-  de la muerte Lope de Vega.
+  de la muerte Lope de Vega. En 4º; 111 p. No se sabe nada de la procedencia del texto,
+  pero pudiera ser una refundición del texto de Diego San José y Rafaela Abadía
 publisher:
 contributor:
 _date: '1935'
@@ -12,10 +16,13 @@ object_type: Mecanoscrito
 repository: Archivo General de la Administración
 source: http://pares.mcu.es/ParesBusquedas20/catalogo/description/3536579
 language: Español
-relation: Se basa en dbitem1000190102
+relation: Se basa en <a href="/damaboba/damaboba/dbitem1000190102/">dbitem1000190102</a>
 rights: Copyright AGA, todos los derechos reservados
 dc: "/dc_records/dbitem1500200124"
-order: '20'
+order: '11'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem1500200124_21-05780-00006-001/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem1500200124_21-05780-00006-001/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem1500200124/manifest.json"
 ---
