--- a/_damaboba/dbitem2000200306.md
+++ b/_damaboba/dbitem2000200306.md
@@ -12,10 +12,13 @@ object_type: Óleo sobre lienzo
 repository: Museo Nacional del Prado
 source: https://www.museodelprado.es/coleccion/obra-de-arte/maria-figueroa-vestida-de-menina/84098414-73df-4eeb-816f-e785e14b263c?searchid=fc65fd3b-f341-f77a-fef7-53568e28e5b9
 language:
-relation: Se aproxima a dbitem0000190501
+relation: Se aproxima a <a href="/damaboba/damaboba/dbitem0000190501/">dbitem0000190501</a>
 rights: Copyright Museo del Prado,  todos los derechos reservados.
 dc: "/dc_records/dbitem2000200306"
-order: '34'
+order: '10'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem2000200306/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem2000200306/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem2000200306/manifest.json"
 ---
