--- a/_damaboba/dbitem5000190107.md
+++ b/_damaboba/dbitem5000190107.md
@@ -11,10 +11,13 @@ object_type: Manuscrito
 repository: Col·lecció digital Biblioescènic del MAE ; Biblioteca Institut del Teatre
 source: https://cataleg.cdmae.cat/cgi-bin/koha/opac-detail.pl?biblionumber=40847
 language: Español
-relation: Se basa en dbitem0000190103
+relation: Se basa en <a href="/damaboba/damaboba/dbitem0000190103/">dbitem0000190103</a>
 rights: <a href="https://creativecommons.org/licenses/by-nc/2.5/es/">https://creativecommons.org/licenses/by-nc/2.5/es/</a>
 dc: "/dc_records/dbitem5000190107"
-order: '25'
+order: '13'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem5000190107_00/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem5000190107_00/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem5000190107/manifest.json"
 ---
