--- a/_damaboba/dbitem6000190106.md
+++ b/_damaboba/dbitem6000190106.md
@@ -13,10 +13,13 @@ object_type: Manuscrito
 repository: Biblioteca Menéndez Pelayo
 source: BMP, Manuscrito 420
 language: Español
-relation: Se basa en dbitem0000190103
+relation: Se basa en <a href="/damaboba/damaboba/dbitem0000190103/">dbitem0000190103</a>
 rights: Copyright BMP, todos los derechos reservados
 dc: "/dc_records/dbitem6000190106"
-order: '26'
+order: '04'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem6000190106_000/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem6000190106_000/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem6000190106/manifest.json"
 ---
