--- a/_damaboba/dbitem7000190110.md
+++ b/_damaboba/dbitem7000190110.md
@@ -11,10 +11,13 @@ object_type: Impreso
 repository: Biblioteca de Catalunya
 source: https://explora.bnc.cat/permalink/34CSUC_BC/1fpark4/alma991015336599706717
 language: Español
-relation: Es versión de dbitem1000190109
+relation: Es versión de <a href="/damaboba/damaboba/dbitem1000190109/">dbitem1000190109</a>
 rights: Copyright BC, todos los derechos reservados
 dc: "/dc_records/dbitem7000190110"
-order: '27'
+order: '14'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem7000190110_00/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem7000190110_00/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem7000190110/manifest.json"
 ---
