--- a/_damaboba/dbitem9000190113.md
+++ b/_damaboba/dbitem9000190113.md
@@ -12,10 +12,13 @@ object_type: Impreso
 repository: Biblioteca Digital de la Comunidad de Madrid
 source: https://bibliotecavirtualmadrid.comunidad.madrid/bvmadrid_publicacion/es/consulta/registro.do?id=25680
 language: Francés
-relation: Se aproxima a dbitem0000190239
+relation: Se aproxima a <a href="/damaboba/damaboba/dbitem0000190239/">dbitem0000190239</a>
 rights: <a href="http://creativecommons.org/publicdomain/mark/1.0/">http://creativecommons.org/publicdomain/mark/1.0/</a>
 dc: "/dc_records/dbitem9000190113"
-order: '29'
+order: '05'
 layout: damaboba_item
 collection: damaboba
+thumbnail: "/img/derivatives/iiif/images/dbitem9000190113_00/full/250,/0/default.jpg"
+full: "/img/derivatives/iiif/images/dbitem9000190113_00/full/1140,/0/default.jpg"
+manifest: "/img/derivatives/iiif/dbitem9000190113/manifest.json"
 ---
